--- a/servicios/templates/pickup_servicios.html
+++ b/servicios/templates/pickup_servicios.html
@@ -11,17 +11,16 @@
 <body>
     <h1>{{ nombre }}</h1>
 
-    <a href="{% url 'perfil-restaurante' %}"><button id="tab-1" name="tab" value="datos" >Datos</button></a>
-
-    <a href="{% url 'menu' %}"><button id="tab-2" name="tab" value="menu">Menú</button></a>
-    
-    <a href="{% url 'paypal' %}"><button id="tab-3" name="tab" value="pago">Metodos de pago</button></a>
-    <button disabled id="tab-4" name="tab" value="servicios">Servicios</button>
-    <br>
-
-    <a href="{% url 'activate_d' %}"><button id="tab-5" name="tab" value="delivery">Delivery</button></a>
-    <button disabled id="tab-6" name="tab" value="pickup">Pickup</button>
-    <a href="{% url 'activate_r' %}"><button id="tab-7" name="tab" value="reservacion">Reservaciones</button></a>
+   <!-- Botones de navegación -->
+   <div class="text-center mb-4">
+    <a href="{% url 'perfil-restaurante' %}" class="btn btn-secondary" id="tab-1" name="tab" value="datos">Datos</a>
+    <a href="{% url 'menu' %}" class="btn btn-secondary" id="tab-2" name="tab" value="menu">Menú</a>
+    <a href="{% url 'paypal' %}" class="btn btn-secondary" id="tab-3" name="tab" value="pago">Métodos de pago</a>
+    <button class="btn btn-secondary" id="tab-4" name="tab" disabled value="servicios">Servicios</button><br>
+    <button class="btn btn-secondary" id="tab-5" name="tab" disabled value="delivery">Delivery</button>
+    <a href="{% url 'activate_p' %}" class="btn btn-secondary" id="tab-6" name="tab" value="pickup">Pickup</a>
+    <a href="{% url 'activate_r' %}" class="btn btn-secondary" id="tab-7" name="tab" value="reservacion">Reservaciones</a>
+</div>
 
     <br>
     <h3>Pickup</h3>
@@ -48,6 +47,7 @@
             Cierre
             <input type="time" name="cierre" value="{{ cierre }}" id="id_cierre">
         </div>
+        <input type="submit" value="Guardar cambios">
     </form>
     
     <!-- Tabla de pedidos -->
@@ -89,24 +89,6 @@
     </table>
 </div>
 
-    <script>
-        // Función para enviar el formulario automáticamente
-        function enviarFormulario() {
-            document.getElementById('formulario').submit();
-        }
-    
-        // Obtener los campos de tiempo
-        const startTimeInput = document.querySelector('#formulario input[id="id_inicio"]');
-        const endTimeInput = document.querySelector('#formulario input[id="id_cierre"]');
-        const checkbox = document.querySelector('#formulario input[type="checkbox"]');
-    
-        // Añadir un evento de cambio a cada campo de tiempo
-        startTimeInput.addEventListener('change', enviarFormulario);
-        endTimeInput.addEventListener('change', enviarFormulario);
-        if (checkbox) {
-            checkbox.addEventListener('change', enviarFormulario);
-        }
-    </script>
 </body>
 </html>
 
