--- a/pedidos/templates/paypal_pago.html
+++ b/pedidos/templates/paypal_pago.html
@@ -29,6 +29,11 @@
           <a class="nav-link" href="{% url 'pago_efectivo' item %}">Efectivo</a>
         </li>
         {% endif %}
+        {% if punto %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'punto_de_venta' item %}">Punto de venta</a>
+        </li>
+        {% endif %}
         {% if zelle %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'zelle_pago' item %}">Zelle</a>
@@ -39,6 +44,7 @@
           <a class="nav-link" href="#">Paypal</a>
         </li>
         {% endif %}
+        
       </ul>
 
     <h1>Paypal</h1>
