--- a/principal/templates/nav.html
+++ b/principal/templates/nav.html
@@ -4,48 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.cdnfonts.com/css/bodoniflf" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link href="https://fonts.cdnfonts.com/css/bodoniflf" rel="stylesheet">
+                
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Anton+SC&family=Lobster&family=Oswald:wght@200..700&family=Sofadi+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        header {
+            padding-bottom: 20px; /* Ajusta este valor según sea necesario */
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img title="Inicio" src="{% static 'img/Imagen1.png' %}" alt="Logo" class="d-inline-block align-text-top" style="max-height: 50px;">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Usar ms-auto para mover a la derecha -->
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}" title="Inicio">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a title="Ayuda" class="nav-link active" href="{% url 'ayuda' %}">Ayuda</a>
-                    </li>
-
+    <header>
+        <div class="container-hero">
+            <div class="container hero">
+                <div class="name-pag">
+                    MealMate
+                </div>
+                <a title="Inicio" class="nav-link" href="{% url 'home' %}">Inicio</a>
+                <a title="Ayuda" class="nav-link" href="{% url 'ayuda' %}">Ayuda</a>
+                
+                <div class="container-user">
+                    <div class="content-shopping-cart">
+                        <!-- Aquí puedes agregar contenido adicional si es necesario -->
+                    </div>
                     {% if nav_links.perfil_url %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ nav_links.perfil_url }}">Perfil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ nav_links.logout_url }}">Cerrar sesión</a>
-                    </li>
-
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ nav_links.login_url }}">Iniciar sesión</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
+                    <a class="nav-link" href="{{ nav_links.pedido_url }}">Pedidos</a>
+                <a class="nav-link"  href="{{ nav_links.perfil_url }}" title="Perfil">Perfil</a>
+                <a class="nav-link" href="{{ nav_links.logout_url }}" title="Cerrar sesion">Cerrar sesión</i></a>
+            {% else %}
+                <a class="nav-link" href="{{ nav_links.login_url }}">Iniciar sesión</i></a>
+            {% endif %}
+                       
+                    
+                </div>
+            </div>  
         </div>
-    </nav>
+        <br>
+    </header>
 
     {% block content %}
-
-   
     {% endblock %}
 </body>
 </html>
