--- a/principal/templates/ubicacion.html
+++ b/principal/templates/ubicacion.html
@@ -8,21 +8,57 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <title>MealMate</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .location-box {
+            text-align: center;
+            padding: 20px;
+            border: 2px solid orange;
+            border-radius: 10px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .location-box h1 {
+            margin-bottom: 20px;
+        }
+        .location-button {
+            padding: 10px 20px;
+            border: 2px solid orange;
+            border-radius: 20px;
+            background-color: white;
+            color: orange;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .location-button:hover {
+            background-color: #ffeb99;
+            color: black;
+        }
+    </style>
 </head>
 <body>
 
+    <br>
+<div class="location-box"><h1>Marca tu Ubicación</h1>{% if error %}
     {% if pickup and id is not 0 %}
         <a href="{% url 'presentacion_three' id %}"><button type="button" class="btn btn-outline-primary">x</button></a>
     {% elif reservaciones and id is not 0%}
         <a href="{% url 'presentacion_two' id %}"><button type="button" class="btn btn-outline-primary">x</button></a>
     {% else %}
-        <a href="{% url 'home' %}">x</a>    
+        <a type="button" class="btn btn-outline-primary" href="{% url 'home' %}">x</a>    
     {% endif %}
-
-    <br>
     
-    <h2>Marca tu ubicacion en el mapa</h2>
-{% if error %}
+        
     <div
         class="alert alert-danger"
         role="alert"
@@ -40,14 +76,16 @@
         {% csrf_token %} 
       
         <!-- Tamaño del mapa -->
-        <div id="map" style="height: 600px; width: 600px;"></div>
+        <div id="map" style="height: 550px; width: 550px;"></div>
         
         <!-- Campos ocultos para latitud y longitud -->
         <input type="hidden" id="lat" name="latitude" {% if latitud %} value="{{ latitud }}"  {% endif %} >
         <input type="hidden" id="long" name="longitude" {% if longitud %} value="{{ longitud }}"  {% endif %} >
         
-        <button type="submit">Guardar</button> 
+        <button class="location-button" type="submit">Guardar</button> 
     </form>
+    </div>
+
     
     <!-- Incluir el archivo JavaScript -->
     <script>
