--- a/user_r/templates/menu.html
+++ b/user_r/templates/menu.html
@@ -5,55 +5,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>{{ nombre }}</title>
 </head>
 <body>
-    <h1>{{ nombre }}'s Menu</h1>
+    <div class="container mt-4">
+        <h1 class="text-center">{{ nombre }}'s Menu</h1>
 
-      <!-- Formulario para los botones de navegación -->
-  
-      <a href="{% url 'perfil-restaurante' %}"><button id="tab-1" name="tab" value="datos" >Datos</button></a>
-        <button disabled id="tab-2" name="tab" value="menu">Menú</button>
-        <a href="{% url 'paypal' %}"><button id="tab-3" name="tab" value="pago">Metodos de pago</button></a>
-        <<a href="{% url 'activate_d' %}"><button id="tab-4" name="tab" value="servicios">Servicios</button></a>
-      
+        <!-- Formulario para los botones de navegación -->
+        <div class="text-center mb-4">
+            <a href="{% url 'perfil-restaurante' %}" class="btn btn-secondary" id="tab-1" name="tab" value="datos">Datos</a>
+            <button disabled class="btn btn-secondary" id="tab-2" name="tab" value="menu">Menú</button>
+            <a href="{% url 'paypal' %}" class="btn btn-secondary" id="tab-3" name="tab" value="pago">Métodos de pago</a>
+            <a href="{% url 'activate_d' %}" class="btn btn-secondary" id="tab-4" name="tab" value="servicios">Servicios</a>
+        </div>
 
-    <a name="add" id="add" class="btn btn-primary" href="{% url 'crear_menu' %}" role="button">Añadir</a>
-    
-    {% if error %}
-        <p>{{ error }}</p>
-    {% endif %}
-    
-    <div class="table-responsive-md">
-        <table class="table table-striped-columns table-hover table-borderless table-primary align-middle">
-            <thead class="table-light">
-                <tr>
-                    <th>Nro.</th>
-                    <th>Nombre</th>
-                    <th>Ingredientes</th>
-                    <th>Precio ($)</th>
-                    <th>Acción</th>
-                </tr>
-            </thead>
-            <tbody class="table-group-divider">
-                {% for menu in menus %}
-                <tr class="table-primary">
-                    <td scope="row">{{ menu.item }}</td>
-                    <td>{{ menu.comida }}</td>
-                    <td>
-                        {{ ingredients|get_item:menu.item }}
-                    </td>
-                    <td>{{ menu.precios }}</td>
-                    <td>
-                        <a name="edit" id="2" class="btn btn-primary" href="{% url 'editar_menu' menu.item %}" role="button">Editar</a>
-                        <a name="delete" id="3" class="btn btn-primary" href="{% url 'delete_dish' menu.item %}" role="button">Eliminar</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="text-center mb-4">
+            <a name="add" id="add" class="btn btn-primary" href="{% url 'crear_menu' %}" role="button">Añadir</a>
+        </div>
+
+        {% if error %}
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
+        {% endif %}
+        
+        <div class="table-responsive-md">
+            <table class="table table-striped table-hover table-borderless align-middle">
+                <thead class="table-light">
+                    <tr>
+                        <th>Nro.</th>
+                        <th>Nombre</th>
+                        <th>Ingredientes</th>
+                        <th>Precio ($)</th>
+                        <th>Acción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for menu in menus %}
+                    <tr>
+                        <td scope="row">{{ menu.item }}</td>
+                        <td>{{ menu.comida }}</td>
+                        <td>{{ ingredients|get_item:menu.item }}</td>
+                        <td>{{ menu.precios }}</td>
+                        <td>
+                            <a name="edit" id="2" class="btn btn-warning" href="{% url 'editar_menu' menu.item %}" role="button">Editar</a>
+                            <a name="delete" id="3" class="btn btn-danger" href="{% url 'delete_dish' menu.item %}" role="button">Eliminar</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-{% endblock %}   
+{% endblock %}
